force-app/main/default/objects/Error_Logger_Event__e/Error_Logger_Event__e.object-meta.xml
<CustomObject>
    <label>Error Logger Event</label>
    <pluralLabel>Error Logger Events</pluralLabel>
</CustomObject>