force-app/main/default/objects/Error_Logger_Event__e/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <description>This is to store the name of the process that is being executed</description>
    <label>Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>