force-app/main/default/objects/Error_Logger_Event__e/fields/Input__c.field-meta.xml
<CustomField>
    <fullName>Input__c</fullName>
    <description>This is to store the Input(Parameter) that is provided for the particular method.</description>
    <label>Input</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>