force-app/main/default/objects/Error_Logger_Event__e/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>This is to store the Name of the Object that Process,Trigger has.</description>
    <label>Object Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>