force-app/main/default/objects/Error_Logger_Event__e/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>This is to store the Identify the severity of the record.</description>
    <label>Severity</label>
    <length>70</length>
    <type>Text</type>
</CustomField>