force-app/main/default/objects/Error_Logger_Event__e/fields/TransactionDateTime__c.field-meta.xml
<CustomField>
    <fullName>TransactionDateTime__c</fullName>
    <description>This is to store the transaction time</description>
    <label>TransactionDateTime</label>
    <type>DateTime</type>
</CustomField>