force-app/main/default/objects/Error_Logger_Event__e/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <description>This is to store the UserName who is executing the process</description>
    <label>User ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>